Initial commit of placeholder site

--- a/_includes/post.html
+++ b/_includes/post.html
@@ -11,14 +11,16 @@
       <span id="date">{{ page.date | date_to_string }}</a>
     </div>
   </div>
-
   <div class="post">
     {{ content }}
   </div>
   <div class="colophon">
     <p>
       <span id="pub-date">Published on {{ page.date | date_to_string }}</span> <span class="separator">&bull;</span>
-      <span id="social">Find me on <a href="">Twitter</a>!</span>
+      <span id="social">Find me on <a href="https://twitter.com/tricoders">Twitter</a>!</span>
+    </p>
+    <p>
+      <small>Triangle Creative Coders is a group of creative coding enthusiasts based in Raleigh, Durham, and Chapel Hill, North Carolina. We focus on creative coding and hacking in the visual and audio arts, using tools such as Processing, openFrameworks, Cinder, Javascript, Pure Data, Max, and more.</small>
     </p>
   </div>
 </div>
