--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title>Flex - {{ page.title }}</title>
+      <title>Tricoders - {{ page.title }}</title>
       <meta name="viewport" content="width=device-width">
 
       <!-- syntax highlighting CSS -->
@@ -24,7 +24,7 @@
       <div class="sidebar" id="sidebar">
         <div class="header">
           <h1 class="title"><a href="/"><img id="logo" src="/images/logo.png"></a></h1>
-          <span class="tagline">A responsive Jekyll theme</span>
+          <span class="tagline">Triangle Creative Coders</span>
         </div>
         <div class="posts">
           <ul class="posts-list">
@@ -40,9 +40,8 @@
         </div>
         <div class="footer">
           <span id="footer-links">
-            <a href="" class="footer-link">About</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
-            <a href="" class="footer-link">GitHub</a>
+            <a href="https://twitter.com/tricoders" class="footer-link">Twitter</a> <span class="separator">&bull;</span>
+            <a href="http://github.com/tricoders" class="footer-link">GitHub</a>
           </span>
         </div>
       </div>
