--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ html, body {
 
 body {
   color: #333;
-  background-color: #fafbfc;
+  background-color: #ffffff;
   font-family: 'Raleway', Arial, sans-serif;
   font-weight: 400;
   font-size: 0.85em;
@@ -135,8 +135,7 @@ a:hover {
 #title {
   color: #494949;
   margin-bottom: 0.35em;
-  font-size: 3.5em;
-  text-transform: uppercase;
+  font-size: 2.0em;
 }
 
 .post {
